default-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: project1-default-gateway
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
    - name: project1-dev 
      hostname: "*.project1.com"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
