backend.yaml
# manifests for backend
apiVersion: v1
kind: Namespace
metadata:
  name: project1-dev
  labels:
    app.kubernetes.io/name: project1-dev
    app.kubernetes.io/part-of: project1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: project1-dev-backend-httproute
  namespace: project1-dev
  labels:
    app.kubernetes.io/name: project1-dev
    app.kubernetes.io/part-of: project1
spec:
  parentRefs:
    - kind: Gateway
      name: project1-default-gateway
      namespace: default
  hostnames:
    - "dev.project1.com"
  rules:
    - matches:
      - path: 
          type: PathPrefix
          value: /api/v1
      backendRefs:
        - name: project1-dev-backend-service
          port: backend
---
apiVersion: v1
kind: Service
metadata:
  name: project1-dev-backend-service
  namespace: project1-dev
  labels:
    app.kubernetes.io/name: project1-dev
    app.kubernetes.io/part-of: project1
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: project1-dev
    app.kubernetes.io/part-of: project1
    app: backend
  ports:
    - name: backend
      targetPort: 9000
      port: 9000
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project1-dev-backend-deployment
  namespace: project1-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: project1-dev
      app.kubernetes.io/part-of: project1
      app: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: project1-dev
        app.kubernetes.io/part-of: project1
        app: backend
    spec:
      containers:
        - name: backend
          image: pdevfig/backend-temp:0.0.1
          ports:
            - name: backend
              containerPort: 9000
              protocol: TCP
          resources: 
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 128Mi
          startupProbe:
            httpGet:
              path: /healthz
              port: backend 
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: backend
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: backend
            periodSeconds: 20
            failureThreshold: 2
