frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project1-dev 
  labels:
    app.kubernetes.io/name: project1-dev
    app.kubernetes.io/part-of: project1
    app.kubernetes.io/environment: dev
---
# http route
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: project1-dev-frontend-httproute
  namespace: project1-dev
  labels:
    app.kubernetes.io/name: project1-dev
    app.kubernetes.io/part-of: project1
    app.kubernetes.io/environment: dev
spec:
  parentRefs:
    - kind: Gateway
      name: project1-default-gateway
      namespace: default
  hostnames:
    - "dev.project1.com"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: project1-dev-frontend-service
          port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: project1-dev-frontend-service
  namespace: project1-dev
  labels:
    app.kubernetes.io/name: project1-dev
    app.kubernetes.io/part-of: Project1
    app.kubernetes.io/environment: dev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: project1-dev
    app.kubernetes.io/part-of: Project1
    app.kubernetes.io/environment: dev
  ports:
    - name: frontend 
      protocol: TCP
      port: 3000
      targetPort: frontend 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project1-dev-deployment
  namespace: project1-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: project1-dev
      app.kubernetes.io/part-of: Project1
      app.kubernetes.io/environment: dev
  template:
    metadata:
      labels:
        app.kubernetes.io/name: project1-dev
        app.kubernetes.io/part-of: Project1
        app.kubernetes.io/environment: dev
    spec:
      containers:
        - name: frontend
          image: pdevfig/frontend-temp:0.0.1

          ports:
            - name: frontend 
              containerPort: 8080
              protocol: TCP
            
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi

          startupProbe:
            httpGet:
              path: /
              port: frontend
            initialDelaySeconds: 10
            failureThreshold: 30
            periodSeconds: 5
          
          readinessProbe:
            httpGet:
              path: /
              port: frontend
            failureThreshold: 10
            periodSeconds: 5
          
          livenessProbe:
            httpGet:
              path: /
              port: frontend
            failureThreshold: 2
            initialDelaySeconds: 30
            periodSeconds: 5
